<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="23dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/text_alert"
            android:text="@string/Sure_text"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:padding="6dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            android:id="@+id/conf_no_button">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_alignParentEnd="true"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            android:id="@+id/conf_yes_button"
            >

        </Button>


    </RelativeLayout>
    
    
    </androidx.cardview.widget.CardView>

</LinearLayout>